--- a/content/themes/Divi-child/assets/css/scss/breakpoints/_base.scss
+++ b/content/themes/Divi-child/assets/css/scss/breakpoints/_base.scss
@@ -211,9 +211,9 @@ body {
  // ********************************************
  // EDITIONS
  // ********************************************
-.edition {
-  @include span(1 of 5);
-  &:last-of-type {
-    @include span(1 of 5 last);
-  }
-}
+// .edition {
+//   @include span(1 of 5);
+//   &:last-of-type {
+//     @include span(1 of 5 last);
+//   }
+// }
