--- a/content/themes/Divi-child/assets/css/scss/modules/_forms.scss
+++ b/content/themes/Divi-child/assets/css/scss/modules/_forms.scss
@@ -1,4 +1,41 @@
 // ********************************************
+// GENERAL FORM STYLES
+// ********************************************
+.et_pb_contact_field {
+  padding:0!important;
+}
+.et_pb_contact {
+  p {
+    input, textarea {
+      border:1px solid rgba($trust_blue, 0.3);
+      background-color: lighten($trust-grey, 58%);
+      color: $trust_blue;
+    }
+  }
+}
+.et_contact_bottom_container {
+  float: none;
+  margin-top: 1.5%;
+  text-align: left;
+  .et_pb_contact_submit {
+    margin:0;
+    @extend %btn;
+    background-color:$trust_blue;
+    @include box-shadow();
+    border:1px solid $trust_blue;
+    color: $white;
+    &:hover,&:focus,&:active {
+      background-color:darken($trust-blue, 8%);
+      color: $white;
+    }
+    &.disable {
+      background-color:$trust-lblue;
+      color: $white;
+    }
+  }
+}
+
+// ********************************************
 // TOGGLE
 // ********************************************
 $toggle-size: 50px;
