Ready for the weekend

--- a/content/themes/Divi-child/assets/css/scss/custom.scss
+++ b/content/themes/Divi-child/assets/css/scss/custom.scss
@@ -7,7 +7,7 @@
 @import "partials/mixins";
 
 /********************* IMPORTING MODULES *********************/
-@import "modules/normalize";
+// @import "modules/normalize";
 @import "modules/typography";
 @import "modules/buttons";
 @import "modules/elements";
