--- a/content/themes/Divi-child/assets/css/scss/modules/_elements.scss
+++ b/content/themes/Divi-child/assets/css/scss/modules/_elements.scss
@@ -78,19 +78,26 @@
       color: $white;
       display:block;
       &.edition_price {
-        font-size: 2.5em;
+        font-size: 3em;
+        line-height: 1.5em;
         font-weight: 900;
-        margin-bottom:0.5em;
-        &::first-letter {
+        margin-bottom:0.25em;
+        vertical-align: middle;
+        &::first-letter, small {
           vertical-align: super;
           font-size: 0.5em;
           margin-right:0.15em;
+          font-weight: 500;
+          letter-spacing: 1px;
+        }
+        small {
+          padding: 0 5px;
         }
       }
       &.edition_title {
-        font-size: 1.75em;
+        font-size: 1em;
         font-weight: 100;
-        letter-spacing: 1px;
+        letter-spacing: 8px;
         text-transform:uppercase;
       }
     }
