--- a/content/themes/Divi-child/assets/css/scss/modules/_forms.scss
+++ b/content/themes/Divi-child/assets/css/scss/modules/_forms.scss
@@ -17,22 +17,22 @@
   float: none;
   margin-top: 1.5%;
   text-align: left;
-  .et_pb_contact_submit {
-    margin:0;
-    @extend %btn;
-    background-color:$trust_blue;
-    @include box-shadow();
-    border:1px solid $trust_blue;
-    color: $white;
-    &:hover,&:focus,&:active {
-      background-color:darken($trust-blue, 8%);
-      color: $white;
-    }
-    &.disable {
-      background-color:$trust-lblue;
-      color: $white;
-    }
-  }
+  // .et_pb_contact_submit {
+  //   margin:0;
+  //   @extend %btn;
+  //   background-color:$trust_blue;
+  //   @include box-shadow();
+  //   border:1px solid $trust_blue;
+  //   color: $white;
+  //   &:hover,&:focus,&:active {
+  //     background-color:darken($trust-blue, 8%);
+  //     color: $white;
+  //   }
+  //   &.disable {
+  //     background-color:$trust-lblue;
+  //     color: $white;
+  //   }
+  // }
 }
 
 // ********************************************
