--- a/content/themes/Divi-child/assets/css/scss/modules/_forms.scss
+++ b/content/themes/Divi-child/assets/css/scss/modules/_forms.scss
@@ -19,7 +19,7 @@
     color: $trust-blue;
     font-size: 2.5em;
     font-weight: 700;
-    border-bottom: 0.5em;
+    margin-bottom: 0.5em;
   }
 }
 .et_contact_bottom_container {
