--- a/content/themes/Divi-child/assets/css/scss/breakpoints/_1280px.scss
+++ b/content/themes/Divi-child/assets/css/scss/breakpoints/_1280px.scss
@@ -298,3 +298,23 @@ html {
     }
   }
 }
+
+.page-id-223 {
+  .banner_container {
+    z-index: 10;
+  }
+  #main-content {
+    position: relative;
+    z-index: 1;
+    .fullMap {
+      #theMap {
+        .et_pb_map {
+          height:700px;
+        }
+      }
+      #mapForm {
+        top:200px;
+      }
+    }
+  }
+}
