--- a/content/themes/Divi-child/assets/css/scss/modules/_forms.scss
+++ b/content/themes/Divi-child/assets/css/scss/modules/_forms.scss
@@ -20,6 +20,7 @@
     font-size: 2.5em;
     font-weight: 700;
     margin-bottom: 0.5em;
+    display: block;
   }
 }
 .et_contact_bottom_container {
