--- a/content/themes/Divi-child/assets/css/scss/breakpoints/_1280px.scss
+++ b/content/themes/Divi-child/assets/css/scss/breakpoints/_1280px.scss
@@ -302,6 +302,7 @@ html {
 .page-id-223 {
   .banner_container {
     z-index: 10;
+    margin-top: -50px;
   }
   #main-content {
     position: relative;
