--- a/content/themes/Divi-child/assets/css/scss/breakpoints/_1280px.scss
+++ b/content/themes/Divi-child/assets/css/scss/breakpoints/_1280px.scss
@@ -300,21 +300,25 @@ html {
 }
 
 .page-id-223 {
-  .banner_container {
-    z-index: 10;
-    margin-top: -50px;
-  }
-  #main-content {
-    position: relative;
-    z-index: 1;
-    .fullMap {
-      #theMap {
-        .et_pb_map {
-          height:700px;
-        }
+  #page-container {
+    #et-main-area {
+      .banner_container {
+        z-index: 10;
+        margin-top: -50px;
       }
-      #mapForm {
-        top:200px;
+      #main-content {
+        position: relative;
+        z-index: 1;
+        .fullMap {
+          #theMap {
+            .et_pb_map {
+              height:700px;
+            }
+          }
+          #mapForm {
+            top:200px;
+          }
+        }
       }
     }
   }
