--- a/content/themes/Divi-child/assets/css/scss/breakpoints/_981px.scss
+++ b/content/themes/Divi-child/assets/css/scss/breakpoints/_981px.scss
@@ -67,3 +67,13 @@ html {
     }
   }
 }
+
+.et-fixed-header {
+  #et-top-navigation {
+    #top-menu {
+      li {
+        color: $trust_blue;
+      }
+    }
+  }
+}
