--- a/content/themes/Divi-child/assets/css/scss/breakpoints/_1280px.scss
+++ b/content/themes/Divi-child/assets/css/scss/breakpoints/_1280px.scss
@@ -214,6 +214,16 @@ html {
   &:last-of-type {
     @include span(1 of 5 last);
   }
+  li {
+    height:200px;
+    line-height:200px;
+    border:1px solid red;
+  }
+  li span {
+    vertical-align:middle;
+    display:inline-block;
+    line-height:1.2;
+  }
 }
 
 // ********************************************
