--- a/content/themes/Divi-child/assets/css/scss/breakpoints/_1280px.scss
+++ b/content/themes/Divi-child/assets/css/scss/breakpoints/_1280px.scss
@@ -218,11 +218,11 @@ html {
     height:200px;
     line-height:200px;
     border:1px solid red;
-  }
-  li span {
-    vertical-align:middle;
-    display:inline-block;
-    line-height:1.2;
+    span {
+      vertical-align:middle;
+      display:inline-block;
+      line-height:1.2;
+    }
   }
 }
 
