--- a/content/themes/Divi-child/assets/css/scss/breakpoints/_1280px.scss
+++ b/content/themes/Divi-child/assets/css/scss/breakpoints/_1280px.scss
@@ -16,8 +16,9 @@ html {
 // ********************************************
 #banner_container {
   #banner_curve, #banner_img {
+    margin-bottom: 171px;
     #heroImg {
-      bottom: -70px;
+      // bottom: -70px;
     }
   }
   #banner_img {
