--- a/content/themes/Divi-child/assets/css/scss/modules/_forms.scss
+++ b/content/themes/Divi-child/assets/css/scss/modules/_forms.scss
@@ -1,6 +1,72 @@
 // ********************************************
 // GENERAL FORM STYLES
 // ********************************************
+.nf-field-element {
+  input.text, input.title, input[type=email], input[type=password], input[type=tel], input[type=text], select, textarea {
+    border:1px solid rgba($trust_blue, 0.3);
+    background-color: lighten($trust-grey, 58%);
+    color: $trust_blue;
+    width: 100%;
+    padding: 16px;
+    font-size: 1em;
+    color: $trust_blue;
+  }
+  select {
+    height:52px !important;
+  }
+  textarea {
+    min-height: 150px;
+  }
+}
+
+.nf-after-field {
+  margin:0;
+  display: inline-block;
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding:16px 0;
+  .nf-input-limit {
+    margin:0;
+  }
+}
+
+input[type=button] {
+  @extend %btn;
+  border:1px solid $trust_blue;
+  border-radius: 0;
+  background-color:$trust_blue;
+  font-size: 1.25em;
+  line-height: 1 !important;
+  color: $white;
+  padding:1em 1.2em !important;
+  &:hover,&:focus,&:active {
+    background-color:darken($trust-blue, 8%);
+    color: $white;
+    padding:1em 1.2em !important;
+  }
+  &.disable {
+    background-color:$trust-lblue;
+    color: $white;
+  }
+}
+
+
+// ********************************************
+// NINJA FORM OVERWRITES
+// ********************************************
+// #ninja_forms_required_items {
+  .nf-field-container {
+    margin-bottom: 15px !important;
+  }
+// }
+
+
+
+.siteForm {
+
+}
+
 .et_pb_contact_field {
   padding:0!important;
 }
@@ -45,26 +111,6 @@
       background-color:$trust-lblue;
       color: $white;
     }
-  }
-}
-
-.form_popup {
-  top: 0px;
-  left: 0px;
-  width: 100%;
-  height: 100%;
-  z-index: 999 !important;
-  content: "";
-  background: rgba($black, 0.8);
-  position: fixed;
-  .form_container {
-    transform: translatey(-50%) translatex(-50%);
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    z-index: 1000;
-    border: 2px solid #0c71c3;
-    border-radius: 8px;
   }
 }
 
