--- a/content/themes/Divi-child/assets/css/scss/breakpoints/_1280px.scss
+++ b/content/themes/Divi-child/assets/css/scss/breakpoints/_1280px.scss
@@ -278,7 +278,7 @@ html {
     right: 0;
     top: 50px;
     z-index: 100;
-    .et_pb_contact {
+    .et_pb_code_inner {
       @include container(100%);
       form {
         &.et_pb_contact_form {
