--- a/content/themes/Divi-child/assets/css/scss/breakpoints/_1280px.scss
+++ b/content/themes/Divi-child/assets/css/scss/breakpoints/_1280px.scss
@@ -42,8 +42,8 @@ html {
     }
   }
   &.page_banner {
-    #banner_image {
-      margin-bottom: 40px;
+    #banner_img {
+      margin-bottom: 50px;
     }
     #banner_curve {
       margin-bottom:50px;
