--- a/content/themes/Divi-child/assets/css/scss/modules/_elements.scss
+++ b/content/themes/Divi-child/assets/css/scss/modules/_elements.scss
@@ -141,28 +141,61 @@
 
 table {
   border-collapse: collapse;
+  border:none !important;
+  table-layout: fixed;
   width: 100%;
-  border:none;
+  // white-space: nowrap;
+  caption {
+    margin-bottom: 1em;
+  }
+  thead {
+
+  }
   th, td {
-    text-align: left;
-    border: 1px solid lighten($trust-grey, 58%);
+    // white-space: nowrap;
+    // overflow: hidden;
+    // text-overflow: ellipsis;
+    background-color: transparent !important;
+    border-top: none !important;
+    // border: 1px solid lighten($trust-grey, 58%);
     padding:16px !important;
     font-size: 1em;
-    text-align: center;
-    color: $trust_lblue;
-    line-height: 1;
+    vertical-align: middle !important;
+    text-align: center !important;
+    color: $trust_blue;
+    line-height: 1.15;
     &:first-child {
-      color:$trust_blue;
-      font-weight: 700;
+      // color:$trust_blue;
+      font-weight: 500;
       text-align: left;
+    }
+    svg, small {
+      display:inline-block;
+      width:100%;
+    }
+    svg {
+      color: $trust_lblue;
+      width:24px !important;
+      height:24px !important;
+    }
+    small {
+      margin-top: 0.25em;
     }
   }
   th {
-    border-bottom: 1px solid $trust_blue;
+    border-bottom: 1px solid $trust_blue !important;
     padding: 21px 16px !important;
+    font-size: 1.15em;
   }
   tbody tr:nth-child(odd) {
     background: $trust-bg-blue;
+  }
+  &.printers, &.cameras, &.idScan {
+    th, td {
+      &:first-child {
+        font-weight: 700;
+      }
+    }
   }
 }
 
