--- a/content/themes/Divi-child/assets/css/scss/modules/_forms.scss
+++ b/content/themes/Divi-child/assets/css/scss/modules/_forms.scss
@@ -15,7 +15,7 @@
     height:52px !important;
   }
   textarea {
-    height: 100px;
+    height: 120px !important;
   }
 }
 
@@ -77,9 +77,7 @@ input[type=button] {
     }
   }
 }
-.et_pb_contact_form {
 
-}
 .et_contact_bottom_container {
   float: none;
   margin-top: 1.5%;
