--- a/content/themes/Divi-child/assets/css/scss/modules/_elements.scss
+++ b/content/themes/Divi-child/assets/css/scss/modules/_elements.scss
@@ -126,6 +126,11 @@
       &:nth-child(even) {
         background-color: $trust-bg-blue;
       }
+      &.extra {
+        span {
+          color:$trust_blue;  
+        }
+      }
     }
   }
   footer {
