--- a/content/themes/Divi-child/assets/css/scss/breakpoints/_1280px.scss
+++ b/content/themes/Divi-child/assets/css/scss/breakpoints/_1280px.scss
@@ -350,24 +350,24 @@ html {
   }
 }
 
-.page-id-223 {
-  #page-container {
-    #et-main-area {
-      #main-content {
-        position: relative;
-        z-index: -1;
-        top: -209px;
-        .fullMap {
-          #theMap {
-            .et_pb_map {
-              height:800px;
-            }
-          }
-          #mapForm {
-            top:200px;
-          }
-        }
-      }
-    }
-  }
-}
+// .page-id-223 {
+//   #page-container {
+//     #et-main-area {
+//       #main-content {
+//         position: relative;
+//         z-index: -1;
+//         top: -209px;
+//         .fullMap {
+//           #theMap {
+//             .et_pb_map {
+//               height:800px;
+//             }
+//           }
+//           #mapForm {
+//             top:200px;
+//           }
+//         }
+//       }
+//     }
+//   }
+// }
