--- a/content/themes/Divi-child/assets/css/scss/modules/_elements.scss
+++ b/content/themes/Divi-child/assets/css/scss/modules/_elements.scss
@@ -61,7 +61,7 @@
     position: relative;
     background-color: rgba($trust-blue, 0.65);
     text-align: center;
-    #banner_content {
+    #banner_content, #banner_page_content {
       width: 80%;
       margin: auto;
       padding-top: 100px;
