--- a/content/themes/Divi-child/assets/css/scss/breakpoints/_1280px.scss
+++ b/content/themes/Divi-child/assets/css/scss/breakpoints/_1280px.scss
@@ -246,6 +246,9 @@ html {
   margin-bottom: 3em;
   border-bottom: 1px solid rgba($trust_blue, 0.1);
   vertical-align: middle;
+  h3, h4 {
+    display:inline-block;
+  }
   #selectCur {
     // text-align: center;
     // padding-bottom: 3em;
