--- a/content/themes/Divi-child/assets/css/scss/breakpoints/_1280px.scss
+++ b/content/themes/Divi-child/assets/css/scss/breakpoints/_1280px.scss
@@ -244,12 +244,15 @@ html {
 #pricing_options {
   @include container(100%);
   margin-bottom: 3em;
+  padding-bottom: 3em;
   border-bottom: 1px solid rgba($trust_blue, 0.1);
   vertical-align: middle;
   h3, h4 {
     display:inline-block;
+    vertical-align: middle;
   }
   #selectCur {
+    display:inline-block;
     // text-align: center;
     // padding-bottom: 3em;
     // @include span(2 of 6);
