--- a/content/themes/Divi-child/assets/css/scss/breakpoints/_1280px.scss
+++ b/content/themes/Divi-child/assets/css/scss/breakpoints/_1280px.scss
@@ -250,6 +250,7 @@ html {
   h3, h4 {
     display:inline-block;
     vertical-align: middle;
+    padding-bottom:0;
   }
   h3 {
     @include span(3 of 6);
