--- a/content/themes/Divi-child/assets/css/scss/modules/_elements.scss
+++ b/content/themes/Divi-child/assets/css/scss/modules/_elements.scss
@@ -185,7 +185,7 @@
         font-size: 3em;
         line-height: 1.5em;
         font-weight: 900;
-        margin-bottom:0.25em;
+        // margin-bottom:0.25em;
         vertical-align: middle;
         &::first-letter, small {
           vertical-align: super;
